// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyDelete Dialog private operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyDelete Dialog private owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`KeyDelete Dialog public operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyDelete Dialog public owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container"></div>
</fragment-stub>
`;

exports[`KeyDelete Icon private operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyDelete Icon private owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyDelete Icon public operator Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--disabled v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;

exports[`KeyDelete Icon public owner Renders the component 1`] = `
<fragment-stub><span><div data-test="close-item" class="v-list-item__title">
          Remove
        </div></span><span class="v-tooltip v-tooltip--bottom"><!----></span><span><i aria-hidden="true" data-test="remove-icon" class="v-icon notranslate v-icon--left material-icons theme--light">delete</i></span>
  <div class="v-dialog__container">
    <!---->
  </div>
</fragment-stub>
`;
